--- a/blok.html
+++ b/blok.html
@@ -282,7 +282,7 @@ body{
             <option value="2">2</option>
             <option value="3">3</option>
           </select>
-          <button class="primary" id="startBtn" type="button">Başlat</button>
+          <button class="primary" id="startBtn" type="button">Okumayı Başlat</button>
           <button class="secondary" id="pauseBtn" type="button">Duraklat</button>
           <button class="secondary" id="stopBtn" type="button">Durdur</button>
         </div>
